@@ -1,12 +1,12 @@
 Package: Matrix
 Version: 0.99875-0
-Date: 2007-03-..
+Date: 2007-04-..
 Title: A Matrix package for R
 Author: Douglas Bates <bates@stat.wisc.edu> and Martin Maechler <maechler@stat.math.ethz.ch>
 Maintainer: <Matrix-authors@R-project.org>
 Description: Classes and methods for dense and sparse matrices and
     operations on them using Lapack, CSparse and CHOLMOD
-Depends: R (>= 2.4.1), stats, methods, utils, lattice
+Depends: R (>= 2.5.0), stats, methods, utils, lattice
 Imports: graphics, lattice, grid, stats
 Enhances: graph, SparseM
 SystemRequirements: GNU make
