@@ -7,15 +7,16 @@ include SOURCES_C.mkf
 
 ## zpotrf.f and zpotf2.f are part of LAPACK, but not of R's LAPACK sources
 ## get rid of this, once we have 'Depends: R (>= 2.5.0)':
-ifeq (, $(findstring -lRlapack, $(LAPACK_LIBS)))
-SOURCES_LAPACK =
-else
-SOURCES_LAPACK = zpotf2.f zpotrf.f zlacgv.f
-endif
+##ifeq (, $(findstring -lRlapack, $(LAPACK_LIBS)))
+##SOURCES_LAPACK =
+##else
+##SOURCES_LAPACK = zpotf2.f zpotrf.f zlacgv.f
+##endif
 
-SOURCES_F = $(SOURCES_LAPACK)
+##SOURCES_F = $(SOURCES_LAPACK)
 
-OBJECTS = $(SOURCES_C:.c=.o) $(SOURCES_F:.f=.o)
+##OBJECTS = $(SOURCES_C:.c=.o) $(SOURCES_F:.f=.o)
+OBJECTS = $(SOURCES_C:.c=.o)
 SHLIB = $(pkg)$(SHLIB_EXT)
 SUBDIRS = CHOLMOD COLAMD AMD
 SUBLIBS = $(SUBDIRS:=.a)
