@@ -1,3 +1,11 @@
+2007-04-25  Douglas Bates  <bates@stat.wisc.edu>
+
+	* DESCRIPTION,src/Makefile: require R>= 2.5.0 and remove Lapack
+	code that is now part of the R Lapack library.
+	
+	* src/init.c,inst/include/{Matrix_stubs.c,cholmod.h}:export
+	cholmod_factorize_p (used in lme4 for GLMMs and NLMMs).
+
 2007-04-12  Martin Maechler  <maechler@stat.math.ethz.ch>
 
 	* R/dgTMatrix.R (mat2dgT): care about NAs
